# 2_Semesterprojekt

./: CMakeLists.txt  README.md  d  main.cpp
include/: game_control.h  kinematic.h  mic_control.h  robot_control.h  sql.h
inventor/: 3mm Shaft50.ipt  Area nv sliced.gcode.3mf  Support test1.ipt  Version 1.iam  moteur_NIDEC_HG37-120-AB-00__HG37-150-AB-00__HG37-200-AB-00__HG37-300-AB-00.stp
inventor/Build filer plade/: Area mh.ipt  Area mv.ipt  Area nh.ipt  Area nv.ipt  Area øh.ipt  Area øv.ipt  Assembly.iam  Forklaring af navne  hjørner holder.ipt  pinde.ipt  pladsholder.ipt
inventor/Build filer plade/OldVersions/: Area mh.0001.ipt  Area nv.0003.ipt  Area nv.0004.ipt  Area øh.0002.ipt  Area øv.0002.ipt  Assembly.0003.iam  Assembly.0004.iam  hjørner holder.0003.ipt
inventor/Plade sliced/: Area mh mv.gcode.3mf  Area nh nv sliced.gcode.3mf  hjørneholder.3mf
inventor/Ringe projekt model/: 1. ring.ipt  2. ring.ipt  3. ring.ipt  4. ring.ipt  5. ring.ipt  Part1.ipt
inventor/Ringe projekt model/OldVersions/: 1. ring.0007.ipt  2. ring.0007.ipt
inventor/STL filer plade/: Area mh.3mf  Area mh.stl  Area mv.stl  Area nh.stl  Area nv.stl  Area øh1.stl  Area øv.stl  hjørner holder.3mf  hjørner holder.stl  pinde.stl  pladsholder.stl
inventor/Version 1/Design Accelerator/: Spur Gear11.ipt  Spur Gear12.ipt  Spur Gear21.ipt  Spur Gear22.ipt  Spur Gears1.iam  Spur Gears2.iam
microcontroller/: Makefile  main.c  main.hex
src/: game_control.cpp  kinematic.cpp  main.cpp  mic_control.cpp  robot_control.cpp  sql.cpp
